--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -11,7 +11,7 @@
   <!-- Fancy font for logo -->
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 </head>
-
+ 
 <body>
 
   <!-- Navigation Bar -->
@@ -40,6 +40,6 @@
       <a href="appointment.html" class="appointment-button">Book my Appointment</a>
     </div>
   </div>
-
+<script src="main.js"></script>
 </body>
 </html>
